--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20940c2c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "648b0cbe",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2a92cb4e",
    "metadata": {},
    "outputs": [],
@@ -65,19 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e3fd3d72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows with 'other' base_model: 54071\n",
-      "Dropping these rows. That's 38.34% rows.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def clean_model(text):\n",
     "    if pd.isnull(text):\n",
@@ -103,19 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8fe7cefc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of outliers removed: 9512\n",
-      "That is 10.94% of the remaining data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Caclucating the median and IQR for price and then mileage\n",
     "median_price = df['price'].median()\n",
@@ -155,166 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2c1a2e8a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>condition</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>odometer</th>\n",
-       "      <th>clean_title</th>\n",
-       "      <th>age</th>\n",
-       "      <th>car_name_chevrolet 1500</th>\n",
-       "      <th>car_name_chevrolet 2500</th>\n",
-       "      <th>car_name_chevrolet 3500</th>\n",
-       "      <th>car_name_chevrolet acadia</th>\n",
-       "      <th>...</th>\n",
-       "      <th>car_name_volkswagen tiguan</th>\n",
-       "      <th>car_name_volvo versa</th>\n",
-       "      <th>fuel_electric</th>\n",
-       "      <th>fuel_gas</th>\n",
-       "      <th>fuel_hybrid</th>\n",
-       "      <th>fuel_other</th>\n",
-       "      <th>transmission_manual</th>\n",
-       "      <th>transmission_other</th>\n",
-       "      <th>drive_fwd</th>\n",
-       "      <th>drive_rwd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>15000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>128000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>27990</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>68696</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>34590</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>29499</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 127 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    price  condition  cylinders  odometer  clean_title  age  \\\n",
-       "31  15000          5          6    128000            1   10   \n",
-       "32  27990          3          8     68696            1   11   \n",
-       "33  34590          3          6     29499            1    7   \n",
-       "\n",
-       "    car_name_chevrolet 1500  car_name_chevrolet 2500  car_name_chevrolet 3500  \\\n",
-       "31                        0                        0                        0   \n",
-       "32                        0                        0                        0   \n",
-       "33                        1                        0                        0   \n",
-       "\n",
-       "    car_name_chevrolet acadia  ...  car_name_volkswagen tiguan  \\\n",
-       "31                          0  ...                           0   \n",
-       "32                          0  ...                           0   \n",
-       "33                          0  ...                           0   \n",
-       "\n",
-       "    car_name_volvo versa  fuel_electric  fuel_gas  fuel_hybrid  fuel_other  \\\n",
-       "31                     0              0         1            0           0   \n",
-       "32                     0              0         1            0           0   \n",
-       "33                     0              0         1            0           0   \n",
-       "\n",
-       "    transmission_manual  transmission_other  drive_fwd  drive_rwd  \n",
-       "31                    0                   0          0          1  \n",
-       "32                    0                   1          0          0  \n",
-       "33                    0                   1          0          0  \n",
-       "\n",
-       "[3 rows x 127 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Since cylinders is an ordinal feature, we will convert it to a numerical value\n",
     "# About 100 have \"other\" so we will just remove them\n",
@@ -358,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e8c875b6",
    "metadata": {},
    "outputs": [],
@@ -370,20 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ff53966b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error: 34974882.42093758\n",
-      "Root Mean Squared Error: 5913.956579223218\n",
-      "R-squared: 0.790060531413769\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note I early on decided linear regression wasn't the best model for this task\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -404,20 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "796ab95e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error: 12,549,425.91\n",
-      "Root Mean Squared Error: 3,542.52\n",
-      "R-squared: 0.9247\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note: I decided not to drop cylinders since Random Forest handle multicollinearity well\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -487,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "30b868b2",
    "metadata": {},
    "outputs": [],
@@ -503,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "36e5f5f7",
    "metadata": {},
    "outputs": [],
@@ -520,24 +326,30 @@
     "}\n",
     "\n",
     "# Save using gzip compression\n",
-    "with gzip.open('car_price_model_complete.pkl.gz', 'wb') as file:\n",
-    "    pickle.dump(model_package, file)"
+    "#with gzip.open('car_price_model_complete.pkl.gz', 'wb') as file:\n",
+    "#    pickle.dump(model_package, file)\n",
+    "\n",
+    "import joblib\n",
+    "import bz2\n",
+    "\n",
+    "with bz2.BZ2File(\"car_price_model_complete.joblib.bz2\", \"wb\") as f:\n",
+    "    joblib.dump(model_package, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fa07a5a8",
+   "execution_count": null,
+   "id": "63d96b89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with gzip.open('car_price_model_complete.pkl.gz', 'rb') as file:\n",
-    "    model_package = pickle.load(file)"
+    "with bz2.BZ2File('car_price_model_complete.joblib.bz2', 'rb') as file:\n",
+    "    model_package = joblib.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "db9ceff6",
    "metadata": {},
    "outputs": [],
@@ -563,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fc8d4f2b",
    "metadata": {},
    "outputs": [],
@@ -582,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4aa96e63",
    "metadata": {},
    "outputs": [],
@@ -592,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "db561564",
    "metadata": {},
    "outputs": [],
@@ -607,20 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "28e3e469",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Point Estimate: $17,751.31\n",
-      "Upper Bound: $19,040.04)\n",
-      "Lower Bound: $16,462.58)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Point Estimate: ${point_estimate:,.2f}\")\n",
     "print(f\"Upper Bound: ${upper_bound:,.2f})\")\n",
